# ai-signal-radio

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
config/: pronunciations.example.yml  sources.ai-process-improvement.example.yml  sources.example.yml  sources.live.example.yml  sources.security.example.yml
config/editorial/: ai-process-improvement.yml
config/topics/: ai-process-improvement.yml  ai.yml  developer-tools.yml  security.yml
docs/: FOUNDATION_AND_EDITORIAL_SKILL.md  MKDOCS_PLAN.md  NEXT_ACTIONS.md  RADIO_QUALITY_PLAN.md  SCHEDULING.md  index.md
scripts/: best-current-run.sh  prune-data.sh  setup.sh
src/ai_signal_radio/: __init__.py  canonical.py  cli.py  config.py  docs_preview.py  editorial.py  models.py  profiles.py  storage.py
src/ai_signal_radio/collectors/: arxiv.py  base.py  hackernews.py  rss.py
src/ai_signal_radio/processors/: __init__.py  dedupe.py  headline.py  ranker.py  script_writer.py  topic_cluster.py  topic_pages.py  wiki_note_builder.py  wiki_writer.py
src/ai_signal_radio/summarizers/: __init__.py  ollama.py
src/ai_signal_radio/tts/: __init__.py  speech_editor.py  voicevox.py
tests/: test_cli.py  test_collectors.py  test_config.py  test_dedupe.py  test_docs_preview.py  test_editorial.py  test_models.py  test_ollama_summarizer.py  test_profiles.py  test_radio_regression.py  test_ranker.py  test_script_writer.py  test_speech_editor.py  test_storage.py  test_topic_cluster.py  test_voicevox.py  test_wiki_writer.py
